--- a/vs_projects/Angular-WebApi-Jasmine/Angular-WebApi-Jasmine/packages.config
+++ b/vs_projects/Angular-WebApi-Jasmine/Angular-WebApi-Jasmine/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AngularJS.Core" version="1.2.22" targetFramework="net451" />
-  <package id="jasmine-js" version="1.3.1.1" targetFramework="net451" />
+  <package id="JasmineTest" version="2.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net451" />
