--- a/try-webpack/package.json
+++ b/try-webpack/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.1.21",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "css-loader": "^0.22.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.3",
