--- a/react/flex-dnd/package.json
+++ b/react/flex-dnd/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "script": "./node_modules/.bin/babel-node --presets react,es2015,stage-0 -- script.js",
+    "start": "./node_modules/.bin/nodemon ./node_modules/.bin/babel-node --presets react,es2015,stage-0 -- script.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "nodemon": "^1.9.1",
     "webpack": "^1.13.0"
   },
   "dependencies": {
