--- a/react/flex-dnd/package.json
+++ b/react/flex-dnd/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "jquery": "^2.2.3",
     "jquery-ui": "^1.10.5",
+    "lodash": "^4.11.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1"
   }
