--- a/es-next/destructuring/package.json
+++ b/es-next/destructuring/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "assign",
+  "name": "destructuring",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,8 +14,5 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "nodemon": "^1.9.2"
-  },
-  "babel": {
-    "presets": ["es2015", "stage-0"]
   }
 }
