--- a/es-next/package.json
+++ b/es-next/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "destructuring",
+  "name": "es-next",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,5 +14,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "nodemon": "^1.9.2"
+  },
+  "babel": {
+    "presets": ["es2015", "stage-0"]
   }
 }
