--- a/graphql/graphql-project/package.json
+++ b/graphql/graphql-project/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "babel-node index.js"
+  },
   "dependencies": {
     "graphql": "^0.8.2"
   },
