--- a/graphql/graphql-project/package.json
+++ b/graphql/graphql-project/package.json
@@ -7,7 +7,8 @@
     "start": "babel-node index.js"
   },
   "dependencies": {
-    "graphql": "^0.8.2"
+    "graphql": "^0.8.2",
+    "mongodb": "^2.2.21"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -15,6 +16,8 @@
     "babel-preset-es2015": "^6.18.0"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
