--- a/graphql/graphql-project/package.json
+++ b/graphql/graphql-project/package.json
@@ -10,16 +10,27 @@
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "graphql": "^0.8.2",
-    "mongodb": "^2.2.21"
+    "mongodb": "^2.2.21",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
-    "babel-preset-es2015": "^6.18.0"
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "react",
+      "es2015",
+      "stage-0"
     ]
+  },
+  "standard": {
+    "parser": "babel-eslint",
+    "globals": ["fetch"]
   }
 }
