--- a/graphql/graphql-project/package.json
+++ b/graphql/graphql-project/package.json
@@ -12,7 +12,8 @@
     "graphql": "^0.8.2",
     "mongodb": "^2.2.21",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-relay": "^0.10.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -20,7 +21,8 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0"
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-relay-plugin": "^0.10.0"
   },
   "babel": {
     "presets": [
@@ -31,6 +33,8 @@
   },
   "standard": {
     "parser": "babel-eslint",
-    "globals": ["fetch"]
+    "globals": [
+      "fetch"
+    ]
   }
 }
