react/graphql/relay

--- a/graphql/graphql-project/package.json
+++ b/graphql/graphql-project/package.json
@@ -25,7 +25,9 @@
     "babel-relay-plugin": "^0.10.0"
   },
   "babel": {
+    "passPerPreset": true,
     "presets": [
+      {"plugins": ["./babelRelayPlugin"]},
       "react",
       "es2015",
       "stage-0"
