--- a/try-electron/electron-react/package.json
+++ b/try-electron/electron-react/package.json
@@ -1,9 +1,22 @@
 {
   "name": "electron-react",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "./public/main.js",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "electron": "^1.4.15"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "babel": {
+    "presets": ["es2015", "stage-0", "react"]
   }
 }
